# BIMigrator-Cognos

./: .env  .env.example  .gitignore  .gitmodules  Bi-Migrator-Cognos-DAX-API  CLAUDE.md  ENHANCED_MQUERY_ERROR_HANDLING_SUMMARY.md  README.md  Sales Dashboard.twb  TEMPLATE_MAPPING.md  __init__.py  analyze_mquery_logs.py  api.py  bimigrator-enhanced  bimigrator-enhanced.py  clean_pycache.py  dax_api_prompt_config.py  debug_folder.py  debug_module_imports.py  debug_template_path.py  deep_search_reports.py  demo_complete_migration.py  demo_enhanced.py  demo_enhanced_clean.py  enhanced_cli_standalone.py  example_dimension_m_query.md  example_explicit_session_usage.py  extract_cpf.py  install_packages.py  list_cognos_content.py  main.py  migrate_fm_package.py  migrate_fm_package_with_reports.py  migration.py  pyproject.toml  remove_folder_all_branches.sh  requirements.txt  run_demo.py  settings.json  setup.py  (+31 more)
Model/: database.tmdl  expressions.tmdl  model.tmdl
bimigrator/: __init__.py  client.py  config_loader.py  main.py
cognos-to-dax-api/: .env.example  .gitignore  README.md  main.py  test_api.py
cognos_migrator/: __init__.py  client.py  config.py  consolidation.py  cpf_extractor.py  cpf_parser.py  enhanced_cli.py  enhanced_cli_v2.py  enhanced_main.py  enhanced_migration_orchestrator.py  explicit_session_migrator.py  expressions.py  generators.py  generators_old.py  hierarchy_parser.py  llm_service.py  llm_template_integration.py  main.py  migrator.py  models.py  module_migrator.py  module_migrator.py.1.bak  module_migrator.py.bak  module_parser.py  report_parser.py  staging_orchestrator.py  summary.py  time_intelligence.py  visual_generator.py
config/: data_classes.py  dataclasses.py  twb-to-pbi.yaml
dax_api_implementation/: api_endpoint_update.py  enhanced_mquery_generator.py  integration_guide.md
docs/: 10_module_migration_process.md  11_generator_implementation_details.md  12_troubleshooting_and_maintenance.md  1_configuration_process.md  2_report_extraction_process.md  3_report_parsing_process.md  4_data_model_generation_process.md  5_m_query_generation_process.md  6_power_bi_project_generation_process.md  7_documentation_generation_process.md  8_cpf_extraction_process.md  9_report_specification_processing_flow.md  (+56 more)
(+4321 files in other folders)
