# Hatchling is a modern and lightweight build backend.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognos-migrator"
version = "1.0.0"
description = "Cognos Analytics to Power BI migration tool - explicit session API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "lxml>=4.9.0",
    "typing-extensions>=4.0.0",
    "websockets>=11.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["cognos_migrator"]

[tool.hatch.metadata]
allow-direct-references = true