# UV is a modern and fast Python package manager and build backend.
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "cognos-migrator"
version = "1.0.0"
description = "Cognos Analytics to Power BI migration tool - explicit session API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "lxml",
    "typing-extensions",
    "websockets",
    "pybars3",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.uv.build-backend]
module-name = "cognos_migrator"
module-root = ""
